# auto-error-into

./: Cargo.toml
auto-error-into/: Cargo.toml  README.md
auto-error-into-macro/: Cargo.toml  README.md
auto-error-into-macro/src/: lib.rs
auto-error-into-tests/: Cargo.toml
auto-error-into-tests/src/: lib.rs
auto-error-into/src/: lib.rs
